--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-school-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lammydev.github.io/Roche--L-imperm-able-website",
+  "homepage": "https://lammydev.github.io/Roche",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
