--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-school-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lammydev.github.io/Roche",
+  "homepage": "https://lammydev.github.io/Roche--L-imperm-able-website",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -16,12 +16,12 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+   "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
