--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://lammydev.github.io/Roche",
-  "name": "my-school-app",
+  "name": "Roche",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,8 +16,6 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
